:sparkles: Switching to the debian image and adding systemd gem

--- a/helm/fluentd/templates/fluentd-daemonset.yaml
+++ b/helm/fluentd/templates/fluentd-daemonset.yaml
@@ -20,7 +20,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: fluentd
-        image: upp-fluentd:latest
+        image: coco/upp-fluentd:latest
         # env:
         resources:
           limits:
