--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -1,16 +1,21 @@
 @include systemd.conf
+@include healthcheck.conf
 
-<filter journald.** >
-  @type grep
-  <exclude>
-    key msg
-    pattern patty
-  </exclude>
-</filter>
+<match docker.source >
+   @type null
+</match>
 
-<match **>
+<match docker.service_name.fluentd >
+   @type null
+</match>
+
+<match docker.** >
    @type copy
    <store>
      @type stdout
    </store>
+</match>
+
+<match **>
+   @type null
 </match>
