:sparkles: Adding systemd input support, processing of docker logs, and adding varnish transforms

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -1,4 +1,13 @@
 @include healthcheck.conf
+@include systemd.conf
+@include varnish.conf
+
+<match docker.service_name.varnish>
+   @type copy
+   <store>
+      @type stdout
+   </store>
+</match>
 
 # Match all logs, and output them to the fluentd /dev/null equivalent for now
 <match **>
