:wrench: Adding multi-format to attempt to parse varnish logs

--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -30,6 +30,17 @@
 # Parse the MESSAGE field as json, and merge the new fields into the log message
 <filter docker.service_name.* >
    @type parser
-   format json
+   format multi_format
    key_name MESSAGE
+   suppress_parse_error_log true
+
+   <pattern>
+      format json
+   </pattern>
+   <pattern>
+      format /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)/
+   </pattern>
+   <pattern>
+      format none
+   </pattern>
 </filter>
