:bug: Fixing service name for varnish

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -2,7 +2,7 @@
 @include systemd.conf
 @include varnish.conf
 
-<match docker.service_name.varnish>
+<match docker.service_name.delivery-varnish>
    @type copy
    <store>
       @type stdout
