--- a/helm/content-fluentd/templates/daemonset.yaml
+++ b/helm/content-fluentd/templates/daemonset.yaml
@@ -4,12 +4,15 @@ metadata:
   name: {{ .Values.service.name }}
   namespace: {{ .Values.service.namespace }}
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: "{{ .Chart.Name | trunc 63 }}"
+    chartVersion: "{{ .Chart.Version | trunc 63 }}"
     app: {{ .Values.service.name }}
 spec:
   selector:
     matchLabels:
       app: {{ .Values.service.name }}
+  updateStrategy:
+    type: "RollingUpdate"
   template:
     metadata:
       labels:
