:sparkles: :wrench: Adding blacklisted container tags and dockerd

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -1,6 +1,6 @@
 @include healthcheck.conf
 @include systemd.conf
-@include varnish.conf
+@include docker.conf
 
 <match docker.service_name.delivery-varnish>
    @type copy
@@ -9,7 +9,7 @@
    </store>
 </match>
 
-# Match all logs, and output them to the fluentd /dev/null equivalent for now
+# Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
 <match **>
    @type null
 </match>
