:art: Moving comments around

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -44,7 +44,7 @@
    </rule>
 </match>
 
-# Parse the MESSAGE field as json, and merge the new fields into the log message
+# Attempt to parse the MESSAGE field using the various expected formats
 <filter docker.service_name.* >
    @type parser
    format multi_format
@@ -54,7 +54,7 @@
    suppress_parse_error_log false
 
    <pattern>
-      # Assume JSON log format (should match most apps)
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
       format json
    </pattern>
    <pattern>
