:memo: Improving comment

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -1,4 +1,4 @@
-# Filter unnecessary fields from the input, and generate the SERVICE_NAME field.
+# Filter unnecessary fields from the input, and map extra fields
 <filter docker.source>
    @type       record_transformer
    enable_ruby true
