--- a/helm/content-fluentd/values.yaml
+++ b/helm/content-fluentd/values.yaml
@@ -3,10 +3,11 @@ service:
 
 image:
   repository: coco/content-fluentd
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 resources:
   limits:
+    cpu: 1000m
     memory: 200Mi
   requests:
     cpu: 100m
