:sparkles: Prove api key obfuscation works

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -9,6 +9,7 @@
       platform          upp-k8s
       SYSTEMD_UNIT      ${record["_SYSTEMD_UNIT"]}
       HOSTNAME          ${record["_HOSTNAME"]}
+      MESSAGE          ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
    </record>
 </filter>
 
