:sparkles: Forwarding all content_type events, as pre-mapped events default to Content. Mapping @time to event_time, as data analytics don't seem to support @ chars in field names.

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -5,7 +5,7 @@
    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SOURCE_REALTIME_TIMESTAMP","_SYSTEMD_INVOCATION_ID"]
    <record>
       SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
-      MESSAGE          ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
+      MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
    </record>
 </filter>
 
@@ -29,6 +29,14 @@
    </pattern>
 </filter>
 
+# Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
+<filter docker.source>
+   @type       record_transformer
+   <record>
+      event_time        ${ record["@time"] }
+   </record>
+</filter>
+
 <match docker.source>
    @type rewrite_tag_filter
 
@@ -37,16 +45,5 @@
       key monitoring_event
       pattern true
       tag docker.monitoring_event
-   </rule>
-</match>
-
-<match docker.monitoring_event>
-   @type rewrite_tag_filter
-
-   # Process any monitoring_event
-   <rule>
-      key content_type
-      pattern Annotations
-      tag docker.annotations_monitoring_event
    </rule>
 </match>
