--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -3,7 +3,7 @@
 @include docker.conf
 
 # Only process monitoring_events of content_type 'Annotations'
-<match docker.annotations_monitoring_event >
+<match docker.monitoring_event >
    @type kinesis_streams
    stream_name "#{ENV['KINESIS_STREAM']}"
 </match>
