--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -32,8 +32,9 @@
 # Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
 <filter docker.source>
    @type       record_transformer
+   enable_ruby true
    <record>
-      event_time        ${ record["@time"] }
+      event_time ${ record["@time"] != nil ? record["@time"] : "" }
    </record>
 </filter>
 
