:sparkles: :wrench: Add recommended thruput settings

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -6,6 +6,13 @@
 <match docker.monitoring_event >
    @type kinesis_streams
    stream_name "#{ENV['KINESIS_STREAM']}"
+
+   # Recommended throughput settings
+   flush_interval 1
+   chunk_limit_size 1m
+   flush_thread_interval 0.1
+   flush_thread_burst_interval 0.01
+   flush_thread_count 15
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
