:sparkles: :wrench: Adding env to log messages

--- a/helm/content-fluentd/templates/daemonset.yaml
+++ b/helm/content-fluentd/templates/daemonset.yaml
@@ -27,6 +27,11 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 12 }}
         env:
+        - name: ENVIRONMENT_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: global-config
+              key: environment
         - name: KINESIS_STREAM
           valueFrom:
             configMapKeyRef:
