:wrench: Improve buffering conf

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -4,18 +4,20 @@
 
 # Only process monitoring_events of content_type 'Annotations'
 <match docker.monitoring_event >
-   @type kinesis_streams
-   stream_name "#{ENV['KINESIS_STREAM']}"
+  @type kinesis_streams
+  stream_name "#{ENV['KINESIS_STREAM']}"
 
    # Recommended throughput settings
-   flush_interval 1
-   chunk_limit_size 1m
-   flush_thread_interval 0.1
-   flush_thread_burst_interval 0.01
-   flush_thread_count 15
+  <buffer>
+    flush_interval 1
+    chunk_limit_size 1m
+    flush_thread_interval 0.1
+    flush_thread_burst_interval 0.01
+    flush_thread_count 15
+  </buffer>
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
 <match **>
-   @type null
+  @type null
 </match>
