:wrench: Fixing syntax

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -7,14 +7,12 @@
   @type kinesis_streams
   stream_name "#{ENV['KINESIS_STREAM']}"
 
-   # Recommended throughput settings
-  <buffer>
-    flush_interval 1
-    chunk_limit_size 1m
-    flush_thread_interval 0.1
-    flush_thread_burst_interval 0.01
-    flush_thread_count 15
-  </buffer>
+  # Recommended throughput settings
+  chunk_limit_size 1
+  flush_interval 16s
+  flush_thread_interval 0.1
+  flush_thread_burst_interval 0.01
+  flush_thread_count 15
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
