:wrench: Changing syntax again

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -10,9 +10,9 @@
   # Recommended throughput settings
   chunk_limit_size 1
   flush_interval 16s
-  flush_thread_interval 0.1
-  flush_thread_burst_interval 0.01
-  flush_thread_count 15
+  try_flush_interval 0.1
+  queued_chunk_flush_interval 0.01
+  num_threads 15
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
