--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -16,5 +16,24 @@
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
 <match **>
-  @type null
+  #@type null
+  @type s3
+   log_level info
+   s3_bucket "splunklogs-upp-k8s-test"
+   s3_region "#{ENV['AWS_REGION']}"
+   s3_object_key_format %{path}%{time_slice}/cluster-log-%{index}.%{file_extension}
+
+   path "fluentd"
+   buffer_path /var/log/fluentd-buffers/s3.buffer
+   store_as json
+   use_server_side_encryption aws:kms
+   flush_interval 30s
+   time_slice_format %Y/%m/%d
+   time_slice_wait 5m
+   utc
+
+   <instance_profile_credentials>
+     ip_address 169.254.169.254
+     port       80b
+   </instance_profile_credentials>
 </match>
