Add aws secrets

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -19,8 +19,8 @@
   #@type null
   @type s3
    log_level info
-   aws_key_id "#{ENV['AWS_ACCESS_KEY']}"
-   aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
+   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+   aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "splunklogs-upp-k8s-test"
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}%{time_slice}/cluster-log-%{index}.%{file_extension}
