update fluentd config

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -15,7 +15,7 @@
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match **>
+<match docker.source>
   #@type null
   @type s3
    log_level info
