--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -38,13 +38,13 @@
    </record>
 </filter>
 
-<match docker.source>
-   @type rewrite_tag_filter
-
-   # Process any monitoring_event
-   <rule>
-      key monitoring_event
-      pattern true
-      tag docker.monitoring_event
-   </rule>
-</match>
+#<match docker.source>
+#   @type rewrite_tag_filter
+#
+#   # Process any monitoring_event
+#   <rule>
+#      key monitoring_event
+#      pattern true
+#      tag docker.monitoring_event
+#   </rule>
+#</match>
