--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -3,19 +3,19 @@
 @include docker.conf
 
 # Only process monitoring_events of content_type 'Annotations'
-#<match docker.monitoring_event >
-#  @type kinesis_streams
-#  stream_name "#{ENV['KINESIS_STREAM']}"
+<match docker.monitoring_event >
+  @type kinesis_streams
+  stream_name "#{ENV['KINESIS_STREAM']}"
 
   # Recommended throughput settings
-#  flush_interval 2s
-#  try_flush_interval 0.1
-#  queued_chunk_flush_interval 0.01
-#  num_threads 8
-#</match>
+  flush_interval 2s
+  try_flush_interval 0.1
+  queued_chunk_flush_interval 0.01
+  num_threads 8
+</match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match **>
+<match docker.fluentd>
   #@type null
   @type s3
    log_level info
