Update S3 plugin buffers

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -48,7 +48,7 @@
       tag docker.monitoring_event
    </rule>
    <rule>
-      key message
+      key MESSAGE
       pattern .+
       tag docker.fluentd
    </rule>
