--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -29,7 +29,9 @@
    buffer_path /var/log/fluentd-buffers/s3.buffer
    store_as json
    use_server_side_encryption aws:kms
-   flush_interval 30s
+   flush_interval 5s
+   num_threads 8
+   buffer_chunk_limit 256m
    time_slice_format %Y/%m/%d
    time_slice_wait 5m
    utc
