--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -23,7 +23,7 @@
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "splunklogs-upp-k8s-test"
    s3_region "#{ENV['AWS_REGION']}"
-   s3_object_key_format %{path}%{time_slice}/cluster-log-%{index}.%{file_extension}
+   s3_object_key_format %{path}/cluster-log-%{index}.%{file_extension}
 
    path "fluentd"
    buffer_path /var/log/fluentd-buffers/s3.buffer
@@ -32,7 +32,7 @@
    flush_interval 5s
    num_threads 8
    buffer_chunk_limit 256m
-   time_slice_format %Y/%m/%d
+   #time_slice_format %Y/%m/%d
    time_slice_wait 5m
    utc
 
