--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -33,7 +33,7 @@
    num_threads 8
    buffer_chunk_limit 256m
    #time_slice_format %Y/%m/%d
-   time_slice_wait 5m
+   #time_slice_wait 5m
    utc
 
    <instance_profile_credentials>
