--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -16,7 +16,7 @@
    key_name MESSAGE
 
    reserve_data true
-   suppress_parse_error_log false
+   suppress_parse_error_log true
 
    <pattern>
       # Parse the MESSAGE field as json, and merge the new fields into the log message
