Refactoring code to match  FluentD v1.0 (latest stable)

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -16,17 +16,17 @@
    key_name MESSAGE
 
    reserve_data true
-   suppress_parse_error_log true
-
-   <pattern>
+   emit_invalid_record_to_error false
+    
+   <parse>
       # Parse the MESSAGE field as json, and merge the new fields into the log message
-      format json
-   </pattern>
-   <pattern>
+      @type json
+   </parse>
+   <parse>
       # Not JSON, passthrough
-      format none
+      @type none
       message_key MESSAGE
-   </pattern>
+   </parse>
 </filter>
 
 # Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
