--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -18,23 +18,30 @@
 <match docker.fluentd>
   #@type null
   @type s3
-   log_level info
+  @log_level info
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "splunklogs-upp-k8s-test"
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/cluster-log-%{index}.%{file_extension}
-
    path "fluentd"
-   buffer_path /var/log/fluentd-buffers/s3.buffer
    store_as json
-   use_server_side_encryption aws:kms
-   flush_interval 5s
-   num_threads 8
-   buffer_chunk_limit 256m
-   #time_slice_format %Y/%m/%d
-   #time_slice_wait 5m
-   utc
+
+   <buffer>
+     @type file
+     path /var/log/fluentd-buffers/s3.buffer
+     timekey 3600 # 1 hour partition
+     timekey_wait 5m
+     timekey_use_utc true # use utc
+     flush_mode interval
+     flush_interval 10s
+     chunk_limit_size 256m 
+     num_threads 8
+   </buffer>
+
+   <format>
+    @type json
+   </format>
 
    <instance_profile_credentials>
      ip_address 169.254.169.254
