change rules order.

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -23,6 +23,21 @@
    </record>
 </filter>
 
+# Attempt to parse the MESSAGE field as JSON
+<filter docker.source>
+   @type parser
+   format multi_format
+   key_name MESSAGE
+
+   reserve_data true
+   emit_invalid_record_to_error false
+    
+   <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+   </parse>
+</filter>
+
 <match docker.source>
    @type rewrite_tag_filter
 
@@ -49,7 +64,7 @@
 
    <rule>
       key monitoring_event
-      pattern true
+      pattern /true/
       tag docker.monitoring_event
    </rule>
 
@@ -61,24 +76,7 @@
    </rule>
 </match>
 
-
-# Attempt to parse the MESSAGE field as JSON
-<filter docker.service_name.* >
-   @type parser
-   format multi_format
-   key_name MESSAGE
-
-   reserve_data true
-   emit_invalid_record_to_error false
-    
-   <parse>
-      # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
-
-
-<filter docker.service_name.*>
-   @type       record_transformer
-   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-</filter>
+#<filter docker.service_name.*>
+#   @type       record_transformer
+#   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+#</filter>
