--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -1,7 +1,7 @@
 # Read logs from journald from the docker systemd unit.
 <source>
   @type systemd
-  filters [{ "_SYSTEMD_UNIT": "docker.service" }]
+  matches [{ "_SYSTEMD_UNIT": "docker.service" }]
   pos_file /var/log/fluentd-journald-docker.pos
   read_from_head true
   tag docker.source
