Update json parser

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -24,19 +24,19 @@
 </filter>
 
 # Attempt to parse the MESSAGE field as JSON
-<filter docker.source>
-   @type parser
-   format multi_format
-   key_name MESSAGE
-
-   reserve_data true
-   emit_invalid_record_to_error false
-    
-   <parse>
+#<filter docker.source>
+#   @type parser
+#   format multi_format
+#   key_name MESSAGE
+#
+#   reserve_data true
+#   emit_invalid_record_to_error false
+#    
+#   <parse>
       # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
+#      @type json
+#   </parse>
+#</filter>
 
 <match docker.source>
    @type rewrite_tag_filter
