--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -25,7 +25,7 @@
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/cluster-log-%{index}.%{file_extension}
    path "fluentd"
-   #store_as json
+   store_as text
 
    <buffer>
      @type file
