--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -39,9 +39,9 @@
      num_threads 8
    </buffer>
 
-   <format>
-    @type json
-   </format>
+   #<format>
+   # @type json
+   #</format>
 
    <instance_profile_credentials>
      ip_address 169.254.169.254
