--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -24,19 +24,19 @@
 </filter>
 
 # Attempt to parse the MESSAGE field as JSON
-#<filter docker.source>
-#   @type parser
-#   format multi_format
-#   key_name MESSAGE
-#
-#   reserve_data true
-#   emit_invalid_record_to_error false
-#    
-#   <parse>
+<filter docker.source>
+   @type parser
+   format multi_format
+   key_name MESSAGE
+
+   reserve_data true
+   emit_invalid_record_to_error false
+    
+   <parse>
       # Parse the MESSAGE field as json, and merge the new fields into the log message
-#      @type json
-#   </parse>
-#</filter>
+      @type json
+   </parse>
+</filter>
 
 <match docker.source>
    @type rewrite_tag_filter
@@ -76,7 +76,21 @@
    </rule>
 </match>
 
-#<filter docker.service_name.*>
-#   @type       record_transformer
-#   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-#</filter>
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   
+   <record>
+      event            ${record}
+      time             ${time.to_i}
+   </record>
+
+</filter>
+
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   renew_record true
+   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+   keep_keys event, time
+</filter>
