--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -25,7 +25,7 @@
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/cluster-log-%{index}.%{file_extension}
    path "fluentd"
-   store_as text
+   store_as json
 
    <buffer>
      @type file
@@ -34,9 +34,9 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 10s
+     flush_interval 2s
      chunk_limit_size 256m 
-     num_threads 8
+     flush_thread_counts 8
    </buffer>
 
    #<format>
