update s3 plugin settings

--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -2,7 +2,13 @@
 <source>
   @type systemd
   matches [{ "_SYSTEMD_UNIT": "docker.service" }]
-  pos_file /var/log/fluentd-journald-docker.pos
-  read_from_head true
+  path /var/log/journal
+  #read_from_head true
+  <storage>
+  @type local
+    persistent true
+    path /var/log/journald_pos.json
+  </storage>
   tag docker.source
+
 </source>
