--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -25,7 +25,7 @@
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/cluster-log-%{index}.%{file_extension}
    path "fluentd"
-   store_as json
+   store_as text
 
    <buffer>
      @type file
@@ -39,9 +39,9 @@
      flush_thread_counts 8
    </buffer>
 
-   #<format>
-   # @type json
-   #</format>
+   <format>
+    @type json
+   </format>
 
    <instance_profile_credentials>
      ip_address 169.254.169.254
