Update Time attribute

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -10,6 +10,7 @@
       SYSTEMD_UNIT      ${record["_SYSTEMD_UNIT"]}
       HOSTNAME          ${record["_HOSTNAME"]}
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
+      environment       "#{ENV['ENVIRONMENT_NAME']}"
    </record>
 </filter>
 
@@ -79,18 +80,34 @@
 <filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
-   
    <record>
       event            ${record}
-      time             ${time.to_i}
    </record>
 
 </filter>
+
+
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   <record>
+      Time             ${time.to_i}
+   </record>
+</filter>
+
+
+
+
 
 <filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
    renew_record true
+   keep_keys event, Time
+</filter>
+
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-   keep_keys event, time
 </filter>
