--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -2,7 +2,7 @@
 <filter docker.source>
    @type       record_transformer
    enable_ruby true
-   remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SOURCE_REALTIME_TIMESTAMP","_SYSTEMD_INVOCATION_ID"]
+   remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
    <record>
       SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
       transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
@@ -80,34 +80,22 @@
 <filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
-   <record>
-      event            ${record}
-   </record>
-
+   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
 </filter>
-
 
 <filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
    <record>
-      Time             ${time.to_i}
+      event            ${record}
+      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
    </record>
+
 </filter>
-
-
-
-
 
 <filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
    renew_record true
-   keep_keys event, Time
-</filter>
-
-<filter docker.service_name.*>
-   @type       record_transformer
-   enable_ruby true
-   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+   keep_keys event, time
 </filter>
