Update Helm chart and S3 Paths

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -23,8 +23,8 @@
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "splunklogs-upp-k8s-test"
    s3_region "#{ENV['AWS_REGION']}"
-   s3_object_key_format %{path}/cluster-log-%{index}.%{file_extension}
-   path "fluentd"
+   s3_object_key_format %{path}/{time}-%{index}
+   path "#{ENV['ENVIRONMENT_NAME']}"
    store_as text
 
    <buffer>
