Add Varnish regex format, reorganize filter rules.

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -24,21 +24,6 @@
    </record>
 </filter>
 
-# Attempt to parse the MESSAGE field as JSON
-<filter docker.source>
-   @type parser
-   format multi_format
-   key_name MESSAGE
-
-   reserve_data true
-   emit_invalid_record_to_error false
-    
-   <parse>
-      # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
-
 <match docker.source>
    @type rewrite_tag_filter
 
@@ -76,6 +61,27 @@
       tag     docker.service_name.$1
    </rule>
 </match>
+
+# Attempt to parse the MESSAGE field as JSON
+<filter docker.service_name.*>
+   @type parser
+   format multi_format
+   key_name MESSAGE
+
+   reserve_data true
+   emit_invalid_record_to_error false
+    
+   <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+   </parse>
+
+   <pattern>
+      # Varnish response access logs
+      format /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)/
+   </pattern>
+
+</filter>
 
 <filter docker.service_name.*>
    @type       record_transformer
