--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -23,7 +23,7 @@
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "splunklogs-upp-k8s-test"
    s3_region "#{ENV['AWS_REGION']}"
-   s3_object_key_format %{path}/{time}-%{index}
+   s3_object_key_format %{path}/${tag}-%{index}
    path "#{ENV['ENVIRONMENT_NAME']}"
    store_as text
 
