Update varnish parse regex

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -76,11 +76,11 @@
       @type json
    </parse>
 
-   <pattern>
+   <parse>
       # Varnish response access logs
-      format /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)/
-   </pattern>
-
+      @type regexp
+      expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)/
+   </parse)
 </filter>
 
 <filter docker.service_name.*>
