fix regex parser

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -87,7 +87,7 @@
    <parse>
       @type regexp
       expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)/
-   </parse)
+   </parse>
 </filter>
 
 <filter docker.service_name.*>
