disable varnish regex

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -78,16 +78,16 @@
 </filter>
 
 # Varnish response access logs
-<filter docker.service_name.*>
-   @type parser
-   key_name MESSAGE
-   reserve_data true
-   emit_invalid_record_to_error false
-   <parse>
-      @type regexp
-      expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-   </parse>
-</filter>
+#<filter docker.service_name.*>
+#   @type parser
+#   key_name MESSAGE
+#   reserve_data true
+#   emit_invalid_record_to_error false
+#   <parse>
+#      @type regexp
+#      expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+#   </parse>
+#</filter>
 
 <filter docker.service_name.*>
    @type       record_transformer
