--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -11,6 +11,7 @@
       HOSTNAME          ${record["_HOSTNAME"]}
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
+      POD_NAME          ${record["CONTAINER_NAME"]}
    </record>
 </filter>
 
@@ -37,10 +38,10 @@
       # Parse the MESSAGE field as json, and merge the new fields into the log message
       @type json
    </parse>
-   #   <parse>
-   #      @type regexp
-   #      expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-   #   </parse>
+   <parse>
+         @type regexp
+         expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+   </parse>
 </filter>
 
 <match docker.source>
