Update varnish regex

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -38,6 +38,17 @@
       # Parse the MESSAGE field as json, and merge the new fields into the log message
       @type json
    </parse>
+</filter>
+
+# Parse Varnish logs
+
+<filter docker.service_name.*>
+   @type parser
+   format multi_format
+   key_name MESSAGE
+
+   reserve_data true
+   emit_invalid_record_to_error false
    <parse>
          @type regexp
          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
