--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -11,7 +11,7 @@
       HOSTNAME          ${record["_HOSTNAME"]}
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
-      POD_NAME          ${record["CONTAINER_NAME"]}
+      POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
    </record>
 </filter>
 
