--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -21,7 +21,7 @@
   @log_level info
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
-   s3_bucket "splunklogs-upp-k8s-test"
+   s3_bucket "#{ENV['BUCKET_NAME']}"
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/fluentd-%{index}
    path "#{ENV['ENVIRONMENT_NAME']}"
