--- a/helm/content-fluentd/templates/daemonset.yaml
+++ b/helm/content-fluentd/templates/daemonset.yaml
@@ -54,13 +54,18 @@ spec:
         - name: S3_ACCESS_KEY
           valueFrom:
             secretKeyRef:
-              name: content-fluentd
-              key: s3.access.key
+              name: splunk-forwarder
+              key: aws.access_key_id
         - name: S3_SECRET_ACCESS_KEY
           valueFrom:
             secretKeyRef:
-              name: content-fluentd
-              key: s3.secret.access.key
+              name: splunk-forwarder
+              key: aws.secret_access_key
+        - name: BUCKET_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: global-config
+              key: splunk.forwarder.s3.bucket
         ports:
         - name: http-input
           containerPort: 8080
