--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -6,12 +6,15 @@
 <match docker.monitoring_event >
   @type kinesis_streams
   stream_name "#{ENV['KINESIS_STREAM']}"
+  aws_key_id "#{ENV['AWS_ACCESS_KEY']}"
+  aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
+  s3_region "#{ENV['AWS_REGION']}"
 
   # Recommended throughput settings
-  flush_interval 2s
-  try_flush_interval 0.1
-  queued_chunk_flush_interval 0.01
-  num_threads 8
+  <buffer>
+    flush_mode interval
+    flush_interval 2s
+  </buffer>
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
