--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -8,7 +8,7 @@
   stream_name "#{ENV['KINESIS_STREAM']}"
   aws_key_id "#{ENV['AWS_ACCESS_KEY']}"
   aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
-  s3_region "#{ENV['AWS_REGION']}"
+  region "#{ENV['AWS_REGION']}"
 
   # Recommended throughput settings
   <buffer>
@@ -22,8 +22,8 @@
   #@type null
   @type s3
   @log_level info
-   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
-   aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
+   aws_key_id "#{ENV['AWS_ACCESS_KEY']}"
+   aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/fluentd-%{index}
