--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -6,10 +6,7 @@
 <match docker.monitoring_event >
   @type kinesis_streams
   stream_name "#{ENV['KINESIS_STREAM']}"
-  aws_key_id "#{ENV['AWS_ACCESS_KEY']}"
-  aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
-  region "#{ENV['AWS_REGION']}"
-
+  
   # Recommended throughput settings
   <buffer>
     flush_mode interval
@@ -22,8 +19,8 @@
   #@type null
   @type s3
   @log_level info
-   aws_key_id "#{ENV['AWS_ACCESS_KEY']}"
-   aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
+   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+   aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
    s3_region "#{ENV['AWS_REGION']}"
    s3_object_key_format %{path}/fluentd-%{index}
