--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -56,11 +56,11 @@
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
-   <rule>
-      key     SERVICE_NAME
-      pattern (.+)
-      tag     docker.service_name.$1
-   </rule>
+   #<rule>
+   #   key     SERVICE_NAME
+   #   pattern (.+)
+   #   tag     docker.service_name.$1
+   #</rule>
 </match>
 
 # # Attempt to parse the MESSAGE field as JSON
