test kinesis streams

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -6,7 +6,8 @@
 <match docker.monitoring_event >
   @type kinesis_streams
   stream_name "#{ENV['KINESIS_STREAM']}"
-  
+  aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+  aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
   # Recommended throughput settings
   <buffer>
     flush_mode interval
