--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -16,36 +16,36 @@
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.service_name.*>
-  #@type null
-  @type s3
-  @log_level info
-   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
-   aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
-   s3_bucket "#{ENV['BUCKET_NAME']}"
-   s3_region "#{ENV['AWS_REGION']}"
-   s3_object_key_format %{path}/fluentd-%{index}
-   path "#{ENV['ENVIRONMENT_NAME']}"
-   store_as text
+# <match docker.service_name.*>
+#   #@type null
+#   @type s3
+#   @log_level info
+#    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+#    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
+#    s3_bucket "#{ENV['BUCKET_NAME']}"
+#    s3_region "#{ENV['AWS_REGION']}"
+#    s3_object_key_format %{path}/fluentd-%{index}
+#    path "#{ENV['ENVIRONMENT_NAME']}"
+#    store_as text
 
-   <buffer>
-     @type file
-     path /var/log/fluentd-buffers/s3.buffer
-     timekey 3600 # 1 hour partition
-     timekey_wait 5m
-     timekey_use_utc true # use utc
-     flush_mode interval
-     flush_interval 2s
-     chunk_limit_size 256m 
-     flush_thread_counts 8
-   </buffer>
+#    <buffer>
+#      @type file
+#      path /var/log/fluentd-buffers/s3.buffer
+#      timekey 3600 # 1 hour partition
+#      timekey_wait 5m
+#      timekey_use_utc true # use utc
+#      flush_mode interval
+#      flush_interval 2s
+#      chunk_limit_size 256m 
+#      flush_thread_counts 8
+#    </buffer>
 
-   <format>
-    @type json
-   </format>
+#    <format>
+#     @type json
+#    </format>
 
-   <instance_profile_credentials>
-     ip_address 169.254.169.254
-     port       80b
-   </instance_profile_credentials>
-</match>
+#    <instance_profile_credentials>
+#      ip_address 169.254.169.254
+#      port       80b
+#    </instance_profile_credentials>
+# </match>
