test fluentd stream

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -13,6 +13,10 @@
     flush_mode interval
     flush_interval 2s
   </buffer>
+  <instance_profile_credentials>
+    ip_address 169.254.169.254
+    port       80b
+  </instance_profile_credentials>
 </match>
 
 # Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
