test kinesis streams

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -3,7 +3,7 @@
 @include docker.conf
 
 # Only process monitoring_events of content_type 'Annotations'
-<match docker.monitoring_event.*>
+<match **>
   @type kinesis_streams
   stream_name "#{ENV['KINESIS_STREAM']}"
   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
