--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -52,65 +52,65 @@
    <rule>
       key monitoring_event
       pattern /true/
-      tag docker.monitoring_event
+      tag annotations.monitoring_event
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
-   #<rule>
-   #   key     SERVICE_NAME
-   #   pattern (.+)
-   #   tag     docker.service_name.$1
-   #</rule>
+   <rule>
+     key     SERVICE_NAME
+     pattern (.+)
+     tag     docker.service_name.$1
+   </rule>
 </match>
 
-# # Attempt to parse the MESSAGE field as JSON
-# <filter docker.service_name.*>
-#    @type parser
-#    format multi_format
-#    key_name MESSAGE
+# Attempt to parse the MESSAGE field as JSON
+<filter docker.service_name.*>
+   @type parser
+   format multi_format
+   key_name MESSAGE
 
-#    reserve_data true
-#    emit_invalid_record_to_error false
+   reserve_data true
+   emit_invalid_record_to_error false
     
-#    <parse>
-#       # Parse the MESSAGE field as json, and merge the new fields into the log message
-#       @type json
-#    </parse>
-# </filter>
+   <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+   </parse>
+</filter>
 
-# # Parse Varnish logs
+# Parse Varnish logs
 
-# <filter docker.service_name.*>
-#    @type parser
-#    format multi_format
-#    key_name MESSAGE
+<filter docker.service_name.*>
+   @type parser
+   format multi_format
+   key_name MESSAGE
 
-#    reserve_data true
-#    emit_invalid_record_to_error false
-#    <parse>
-#          @type regexp
-#          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-#    </parse>
-# </filter>
+   reserve_data true
+   emit_invalid_record_to_error false
+   <parse>
+         @type regexp
+         expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+   </parse>
+</filter>
 
-# <filter docker.service_name.*>
-#    @type       record_transformer
-#    enable_ruby true
-#    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-# </filter>
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+</filter>
 
-# <filter docker.service_name.*>
-#    @type       record_transformer
-#    enable_ruby true
-#    <record>
-#       event            ${record}
-#       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-#    </record>
-# </filter>
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   <record>
+      event            ${record}
+      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+   </record>
+</filter>
 
-# <filter docker.service_name.*>
-#    @type       record_transformer
-#    enable_ruby true
-#    renew_record true
-#    keep_keys event, time
-# </filter>
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   renew_record true
+   keep_keys event, time
+</filter>
