--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -25,6 +25,20 @@
    </record>
 </filter>
 
+# Attempt to parse the MESSAGE field as JSON
+<filter docker.source>
+   @type parser
+   key_name MESSAGE
+
+   reserve_data true
+   emit_invalid_record_to_error false
+    
+   <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+   </parse>
+</filter>
+
 <match docker.source>
    @type rewrite_tag_filter
 
@@ -62,55 +76,6 @@
       tag annotations.monitoring_event
    </rule>
 </match>
-
-<match annotations.monitoring_event.**>
-  @type copy
-  <store>
-      @type s3
-      @log_level info
-      aws_key_id "#{ENV['S3_ACCESS_KEY']}"
-      aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
-      s3_bucket "#{ENV['BUCKET_NAME']}"
-      s3_region "#{ENV['AWS_REGION']}"
-      s3_object_key_format %{path}/fluentd-%{index}
-      path "TEST-COPY"
-      store_as text
-      <buffer>
-        @type file
-        path /var/log/fluentd-buffers/s3-second.buffer
-      timekey 3600 # 1 hour partition
-      timekey_wait 5m
-      timekey_use_utc true # use utc
-      flush_mode interval
-      flush_interval 2s
-      chunk_limit_size 256m 
-      flush_thread_counts 8
-      </buffer>
-      <format>
-       @type json
-      </format>
-      <instance_profile_credentials>
-        ip_address 169.254.169.254
-        port       80b
-      </instance_profile_credentials>
-   </store>
-</match>
-
-
-
-# Attempt to parse the MESSAGE field as JSON
-<filter docker.service_name.*>
-   @type parser
-   key_name MESSAGE
-
-   reserve_data true
-   emit_invalid_record_to_error false
-    
-   <parse>
-      # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
 
 # Parse Varnish logs
 
