Add new regex rule

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -25,20 +25,6 @@
    </record>
 </filter>
 
-# Attempt to parse the MESSAGE field as JSON
-<filter docker.source>
-   @type parser
-   key_name MESSAGE
-
-   reserve_data true
-   emit_invalid_record_to_error false
-    
-   <parse>
-      # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
-
 <match docker.source>
    @type rewrite_tag_filter
 
@@ -71,13 +57,27 @@
    </rule>
 
    <rule>
-      key monitoring_event
-      pattern /true/
+      key MESSAGE
+      pattern /\"monitoring_event\":\"true/
       tag annotations.monitoring_event
    </rule>
 </match>
 
 # Parse Varnish logs
+
+# Attempt to parse the MESSAGE field as JSON
+# <filter docker.service_name.*>
+#    @type parser
+#    key_name MESSAGE
+
+#    reserve_data true
+#    emit_invalid_record_to_error false
+    
+#    <parse>
+#       # Parse the MESSAGE field as json, and merge the new fields into the log message
+#       @type json
+#    </parse>
+# </filter>
 
 <filter docker.service_name.*>
    @type parser
