--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -49,35 +49,36 @@
       tag docker.blacklisted_syslogids
    </rule>
 
-   # Re-route logs to tags that include their service name (for per-service processing)
-   <rule>
-     key     SERVICE_NAME
-     pattern (.+)
-     tag     docker.service_name.$1
-   </rule>
-
    <rule>
       key MESSAGE
       pattern /\"monitoring_event\":\"true/
       tag annotations.monitoring_event
    </rule>
+
+   # Re-route logs to tags that include their service name (for per-service processing)
+   #<rule>
+   #  key     SERVICE_NAME
+   #  pattern (.+)
+   #  tag     docker.service_name.$1
+   #</rule>
+
 </match>
 
 # Parse Varnish logs
 
-# Attempt to parse the MESSAGE field as JSON
-# <filter docker.service_name.*>
-#    @type parser
-#    key_name MESSAGE
+#Attempt to parse the MESSAGE field as JSON
+<filter docker.service_name.*>
+   @type parser
+   key_name MESSAGE
 
-#    reserve_data true
-#    emit_invalid_record_to_error false
+   reserve_data true
+   emit_invalid_record_to_error false
     
-#    <parse>
-#       # Parse the MESSAGE field as json, and merge the new fields into the log message
-#       @type json
-#    </parse>
-# </filter>
+   <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+   </parse>
+</filter>
 
 <filter docker.service_name.*>
    @type parser
