Improve matching rules.

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -32,27 +32,27 @@
    <rule>
       key MESSAGE
       pattern \/__health|\"transaction_id\":\"SYNTHETIC-REQ|\/__gtg|transaction_id=SYNTHETIC-REQ|MountVolume.SetUp succeeded for volume
-      tag docker.blacklisted
+      tag blacklisted.message
    </rule>
 
    # Filter out blacklisted container tags
    <rule>
       key CONTAINER_TAG
       pattern gcr.io\/google_containers\/heapster|gcr.io\/google_containers\/kubedns-amd64|gcr.io\/google_containers\/addon-resizer|coco\/resilient-splunk-forwarder
-      tag docker.blacklisted_tags
+      tag blacklisted.tags
    </rule>
 
    # Filter out docker daemon logs
    <rule>
       key SYSLOG_IDENTIFIER
       pattern dockerd
-      tag docker.blacklisted_syslogids
+      tag blacklisted.syslogids
    </rule>
 
    <rule>
       key MESSAGE
       pattern /\"monitoring_event\":\"true/
-      tag annotations.monitoring_event
+      tag docker.annotations
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
