--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -3,7 +3,7 @@
 @include docker.conf
 
 # Only process monitoring_events of content_type 'Annotations'
-<match annotations.monitoring_event.**>
+<match docker.annotations.**>
   @type kinesis_streams
   stream_name "#{ENV['KINESIS_STREAM']}"
   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
@@ -20,7 +20,7 @@
 </match>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.service_name.*>
+<match docker.**>
   #@type null
   @type s3
   @log_level info
@@ -52,4 +52,8 @@
      ip_address 169.254.169.254
      port       80b
    </instance_profile_credentials>
+</match>
+
+<match blacklisted.*>
+  @type null
 </match>
